zipkin/templates/ingress.yaml
{{- if .Values.ingress.enabled -}}
{{- $fullName := include "zipkin.fullname" . -}}
{{- $ingressPath := .Values.ingress.path -}}
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: {{ $fullName }}
  labels:
    app: {{ template "zipkin.name" . }}
    chart: {{ template "zipkin.chart" . }}
    release: {{ .Release.Name }}
    heritage: {{ .Release.Service }}
{{- with .Values.ingress.annotations }}
  annotations:
{{ toYaml . | indent 4 }}
{{- end }}
spec:
{{- if .Values.ingress.tls }}
  tls:
  {{- range .Values.ingress.tls }}
    - hosts:
      {{- range .hosts }}
        - {{ . }}
      {{- end }}
      secretName: {{ .secretName }}
  {{- end }}
{{- end }}
  rules:
  {{- range .Values.ingress.hosts }}
    - host: {{ . }}
      http:
        paths:
          - path: {{ $ingressPath }}
            backend:
              serviceName: {{ $fullName }}
              servicePort: http
  {{- end }}
{{- end }}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"traefik","traefik.ingress.kubernetes.io/preserve-host":"true"},"name":"zipkin","namespace":"zipkin"},"spec":{"rules":[{"host":"zipkin.aixiangdao.tech","http":{"paths":[{"backend":{"serviceName":"zipkin","servicePort":9411}}]}}]}}
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/preserve-host: "true"
  creationTimestamp: 2018-10-05T06:12:45Z
  generation: 1
  name: zipkin
  namespace: zipkin
  resourceVersion: "11260094"
  selfLink: /apis/extensions/v1beta1/namespaces/zipkin/ingresses/zipkin
  uid: ad2d98e8-c865-11e8-a7d1-00163e069477
spec:
  rules:
  - host: zipkin.aixiangdao.tech
    http:
      paths:
      - backend:
          serviceName: zipkin
          servicePort: 9411
